[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ay8910_wrapper"
version = "0.2.0"
description = "A Python wrapper for a standalone AY-3-8910 emulator core from MAME."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "devfred78", email = "devfred78@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Emulation",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dependencies = [
    "lhafile",
    "numpy>=1.24.4",
    "sounddevice>=0.5.5",
]

[project.scripts]
play_ym = "scripts.ym_player:main"

[tool.scikit-build]
cmake.source-dir = "."
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.packages = ["src/ay8910_wrapper"]
install.strip = false
