[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ay8910_wrapper"
version = "0.0.0"
description = "A Python wrapper for the AY-3-8910 and AY-3-8912 sound chip emulators, featuring real-time audio playback and cycle-accurate synthesis."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "devfred78", email = "97401939+devfred78@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dependencies = [
    "lhafile",
    "numpy>=1.24.4",
    "sounddevice>=0.5.5",
]

[project.urls]
Homepage = "https://github.com/devfred78/ay8910"
Documentation = "https://devfred78.github.io/ay8910"

[project.scripts]
play_ym = "scripts.ym_player:main"

[tool.scikit-build]
cmake.source-dir = "."
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.packages = ["src/ay8910_wrapper"]
install.strip = false

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.cibuildwheel]
# Build only for 64-bit and standard Python versions (adjust as needed)
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-win32", "*-manylinux_i686", "pp*"]
# Use manylinux_2_28 for modern glibc compatibility
manylinux-x86_64-image = "manylinux_2_28"
